force-app/main/default/objects/Int_Asset_Usage__c/Int_Asset_Usage__c.object-meta.xml
<CustomObject>
    <description>Int Asset Usage</description>
    <label>Int Asset Usage</label>
    <nameField>
        <displayFormat>AUI-{0000000000}</displayFormat>
        <label>Asset Usage Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Asset Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>