force-app/main/default/objects/Int_Asset_Usage__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asset Name</description>
    <label>Asset Name</label>
    <referenceTo>Int_Asset__c</referenceTo>
    <relationshipLabel>Int Asset Usages</relationshipLabel>
    <relationshipName>Int_Asset_Usages</relationshipName>
    <type>Lookup</type>
</CustomField>