force-app/main/default/objects/Int_Asset_Usage__c/fields/Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>Meter_Number__c</fullName>
    <description>Meter Number</description>
    <label>Meter Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>