force-app/main/default/objects/Int_Asset_Usage__c/fields/Observation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Observation_Date_Time__c</fullName>
    <description>Observation Date Time</description>
    <label>Observation Date Time</label>
    <type>DateTime</type>
</CustomField>