force-app/main/default/objects/Int_Asset_Usage__c/fields/Observation_Measure__c.field-meta.xml
<CustomField>
    <fullName>Observation_Measure__c</fullName>
    <description>Observation Measure</description>
    <label>Observation Measure</label>
    <length>19</length>
    <type>Text</type>
</CustomField>