force-app/main/default/objects/Int_Asset_Usage__c/fields/Observation_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Observation_Unit_Code__c</fullName>
    <description>Observation Unit Code</description>
    <label>Observation Unit Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>